Separate matrix/path params; other misc changes